--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,26 @@
 cmake_minimum_required(VERSION 3.21)
-project(pacman)
+project(bomberman)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(pacman src/main.cpp)
+add_executable(bomberman src/main.cpp src/engine.cpp headers/engine.hpp src/mapitem.cpp headers/mapitem.hpp src/wall.cpp headers/wall.hpp src/map.cpp headers/map.hpp)
 
-include_directories(headers C:/SFML/include)
+include_directories(headers /usr/include c:/SFML/include)
 
+set(SFML_ROOT c:/SFML)
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
-find_package(SFML REQUIRED system window graphics)
-if(SFML_FOUND)
+find_package(SFML REQUIRED system window graphics network audio)
+if (SFML_FOUND)
     include_directories(${SFML_INCLUDE_DIR})
-    target_link_libraries(pacman ${SFML_LIBRARIES})
+    target_link_libraries(bomberman ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
 endif()
 
 file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
 
+# Copy dlls to build
 if(WIN32)
-    file(GLOB BINARY_DEP_DLLS "${SFML_INCLUDE_DIR}/..bin/*.dll")
+    file(GLOB BINARY_DEP_DLLS "${SFML_INCLUDE_DIR}/../bin/*.dll")
     file(COPY ${BINARY_DEP_DLLS} DESTINATION ${CMAKE_BINARY_DIR})
+    file(GLOB MINGW_DEP_DLLS "C:/mingw64/bin/*.dll")
+    file(COPY ${MINGW_DEP_DLLS} DESTINATION ${CMAKE_BINARY_DIR})
 endif()
